CNV#37643: RN - Hot plug memory

--- a/virt/release_notes/virt-4-17-release-notes.adoc
+++ b/virt/release_notes/virt-4-17-release-notes.adoc
@@ -81,6 +81,8 @@ This release adds new features and enhancements related to the following compone
 [id="virt-4-17-web"]
 === Web console
 
+* xref:../../virt/virtual_machines/virt-edit-vms.adoc#virt-hot-plugging-memory_virt-edit-vms[Hot plugging memory] for VMs from the web console is now generally available.
+
 [id="virt-4-17-monitoring"]
 === Monitoring
 
