WMCO hiding docs from 10.16

--- a/welcome/learn_more_about_openshift.adoc
+++ b/welcome/learn_more_about_openshift.adoc
@@ -160,10 +160,13 @@ a|* xref:../networking/cluster-network-operator.adoc#cluster-network-operator[Cl
 | xref:../operators/understanding/olm-understanding-operatorhub.adoc#olm-understanding-operatorhub[Manage Operators]
 |
 
-| xref:../windows_containers/understanding-windows-container-workloads.adoc#understanding-windows-container-workloads_understanding-windows-container-workloads[Understanding Windows container workloads]
-|
-
 |===
+
+//// 
+Hiding until WMCO 10.17.0 releases, replace as the last row of the above table after WMCO GAs
+| xref: ../windows_containers/understanding-windows-container-workloads.adoc#understanding-windows-container-workloads_understanding-windows-container-workloads[Understanding Windows container workloads]
+|
+////
 
 [discrete]
 ==== Changing cluster components
